--- a/rejestracja.html
+++ b/rejestracja.html
@@ -27,7 +27,7 @@
 
 <main>
 
-	<article class = "test">
+	<div class = "test">
 	
 		<div class = "container">
 		
@@ -37,7 +37,10 @@
 			
 			</header>
 			
-			<section>
+			
+			
+			<article>
+				<h2> REJESTRACJA</h2>
 			
 				<div class = "row">
 					
@@ -75,11 +78,11 @@
 				
 				</div>
 			
-			</section>
+			</article>
 		
 		</div>
 	
-	</article>
+	</div>
 
 
 
