--- a/logowanie.html
+++ b/logowanie.html
@@ -27,7 +27,7 @@
 
 <main>
 
-	<article class = "test">
+	<div class = "test">
 	
 		<div class = "container">
 		
@@ -37,7 +37,9 @@
 			
 			</header>
 			
-			<section>
+			<article>
+			
+				<h2>LOGOWANIE</h2>
 			
 				<div class = "row">
 					
@@ -68,11 +70,11 @@
 				
 				</div>
 			
-			</section>
+			</article>
 		
 		</div>
 	
-	</article>
+	</div>
 
 
 
